--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                   <li class="na">Free CDN</li>
                   <li class="na">Dedicated IP Address</li>
                 </ul>
-                <a href="https://wa.me/+9647517960618" class="btn-buy"
+                <a href="https://wa.me/+963986223268" class="btn-buy"
                   >Order Now</a
                 >
               </div>
@@ -399,7 +399,7 @@
                   <li class="na">Free CDN</li>
                   <li class="na">Dedicated IP Address</li>
                 </ul>
-                <a href="https://wa.me/+9647517960618" class="btn-buy"
+                <a href="https://wa.me/+963986223268" class="btn-buy"
                   >Order Now</a
                 >
               </div>
@@ -430,7 +430,7 @@
                   <li>Free CDN</li>
                   <li class="na">Dedicated IP Address</li>
                 </ul>
-                <a href="https://wa.me/+9647517960618" class="btn-buy"
+                <a href="https://wa.me/+963986223268" class="btn-buy"
                   >Order Now</a
                 >
               </div>
@@ -461,7 +461,7 @@
                   <li>Free CDN</li>
                   <li>Dedicated IP Address</li>
                 </ul>
-                <a href="https://wa.me/+9647517960618" class="btn-buy"
+                <a href="https://wa.me/+963986223268" class="btn-buy"
                   >Order Now</a
                 >
               </div>
@@ -486,7 +486,7 @@
                     <i class="bi bi-geo-alt"></i>
                     <h3>Address</h3>
                     <p>
-                      Erbil<br />Gulan St, Gulan Nergiz Plaza Floor 4 office 420
+                      Syria, Homs<br />Old clock, City center 2 building, Floor 4, Office 404
                     </p>
                   </div>
                 </div>
@@ -494,8 +494,7 @@
                   <div class="info-box">
                     <i class="bi bi-telephone"></i>
                     <h3>Call Us</h3>
-                    <p>+964 751 796 0618</p>
-                    <p>+964 751 157 6961</p>
+                    <p>+963 986 223 268</p>
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -690,10 +689,9 @@
             >
               <h4>Contact Us</h4>
               <p>
-                Erbil Gulan Street,<br />
-                Gulan Nergiz Plaza, Floor 4, office 420<br />
-                Iraq <br /><br />
-                <strong>Phone:</strong> +964 751 796 0618<br />
+                Syria, Homs<br />
+                Old clock, City center 2 building, Floor 4, Office 404<br />
+                <strong>Phone:</strong> +963 986 223 268<br />
                 <strong>Email:</strong> sales@limitless-tech.cloud<br />
               </p>
             </div>
