active numbers and emails

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
                   <div class="info-box">
                     <i class="bi bi-telephone"></i>
                     <h3>Call Us</h3>
-                    <p>+963 986 223 268</p>
+                    <p><a href="https://wa.me/+963986223268">+963 986 223 268</a></p>
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -502,7 +502,8 @@
                     <i class="bi bi-envelope"></i>
                     <h3>Email Us</h3>
                     <p>
-                      info@limitless-tech.cloud<br />sales@limitless-tech.cloud
+                      <a href="mailto:info@limitless-tech.cloud">info@limitless-tech.cloud</a><br />
+                      <a href="mailto:sales@limitless-tech.cloud">sales@limitless-tech.cloud</a>
                     </p>
                   </div>
                 </div>
@@ -691,8 +692,8 @@
               <p>
                 Syria, Homs<br />
                 Old clock, City center 2 building, Floor 4, Office 404<br />
-                <strong>Phone:</strong> +963 986 223 268<br />
-                <strong>Email:</strong> sales@limitless-tech.cloud<br />
+                <strong>Phone:</strong> <a href="https://wa.me/+963986223268" >+963 986 223 268</a><br />
+                <strong>Email:</strong> <a href="mailto:sales@limitless-tech.cloud">sales@limitless-tech.cloud</a><br />
               </p>
             </div>
           </div>
